--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
     "main": "server.js",
     "scripts": {
         "start": "node server.js",
-        "watch": "nodemon",
+        "watch": "nodemon server.js",
         "seed": "node seeders/seed.js"
     },
     "keywords": [],
@@ -19,5 +19,8 @@
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^6.1.8",
         "path": "^0.12.7"
+    },
+    "devDependencies": {
+        "nodemon": "^2.0.22"
     }
 }
